Thu Nov 28 21:43:48 2013  Zachary Scott  <e@zzak.io>

	* doc/dtrace_probes.rdoc: [DOC] Import dtrace probes doc from wiki

Thu Nov 28 21:17:32 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add heading above ChangeLog tips to
	  setup entry for commits, its not required. Actually easier if
	  contributors don't include a ChangeLog entry.

Thu Nov 28 21:16:18 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add coding style heading for patch
	  rules

Thu Nov 28 21:15:45 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add notes about deciding what to patch

Thu Nov 28 19:43:45 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* benchmark/bm_hash_flatten.rb: added. r43896 is about 4 times faster
	  than 2.0.0p353.

	* benchmark/bm_hash_keys.rb: added. r43896 is about 5 times faster
	  than 2.0.0p353.

	* benchmark/bm_hash_values.rb: added. r43896 is about 5 times faster
	  than 2.0.0p353.

Thu Nov 28 19:29:04 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add notes about slideshow proposals
	  from wiki page: HowToRequestFeatures

Thu Nov 28 17:34:42 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c: add st_values() and st_values_check().

	* include/ruby/st.h: add prototypes for above.

	* hash.c (rb_hash_values): use st_values_check() for performance
	 improvement if VALUE and st_data_t are compatible.

Thu Nov 28 17:14:14 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): fix not to use Qundef in st.c.

	* include/ruby/st.h: define modified prototype.

	* hash.c (rb_hash_keys): use modified st_keys().

Thu Nov 28 16:34:43 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Expose details about last garbage collection via GC.stat.
	* gc.c (gc_stat): Add :last_collection_flags for reason/trigger/type of
	  last GC run.
	* gc.c (gc_prof_sweep_timer_stop): Record HAVE_FINALIZE GPR even
	  without GC_PROFILE_MORE_DETAIL.