@@ -1,3 +1,8 @@
+Fri Nov 29 11:26:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h (rb_block_call_func): add blockarg.  block
+	  function can take block argument, e.g., proc {|&blockarg| ...}.
+
 Thu Nov 28 21:43:48 2013  Zachary Scott  <e@zzak.io>
 
 	* doc/dtrace_probes.rdoc: [DOC] Import dtrace probes doc from wiki
